# glidar

./: .gitignore  CMakeLists.txt  Makefile  README.md  bunny_rotate.rb  generate.rb  gl_error.cpp  gl_error.h  lidarf.glsl  lidarv.glsl  main.cpp  mesh.cpp  mesh.h  phong_fragment.glsl  phong_vertex.glsl  rock_3d_model_demo.rb  scene.h  shader.cpp  shader.h  simple_fragment_shader.glsl  simple_transform_shader.glsl  simple_vertex_shader.glsl  spotf.glsl  spotv.glsl  texture.cpp  texture.h
cmake/Modules/: FindFLANN.cmake  FindGLEW.cmake  FindZeroMQ.cmake  UseDebugSymbols.cmake
lib/: quaternion.rb
scripts/: generate_distance_test.rb  generate_standard_test.rb
shaders/: lidarf.glsl  spotv.glsl
src/: main.cpp  mesh.cpp  mesh.h  pcl.h  publish.cpp  quaternion.h  scene.h  shader.h  subscribe.cpp  texture.h
src/service/: pose_logger.h  publish.h  service.h  subscribe.h
